overlays/prod/replica-patch.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: weather-dashboard-app
  namespace: kustomize-argocd-demo

spec:
  replicas: 4
