overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: weather-dashboard-ingress

spec:
  rules:
    - host: weather-dashboard-prod.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: weather-dashboard-service

                port:
                  number: 80
